Added filter on hotel
